      repos.  Thanks to Thomas Parmelan for the patch.  (Closes: #563918)
    + Change '~' in version numbers to '.' when tagging in git.  Thanks to
      Damyan Ivanov.  (Closes: #564075)
    + Treat darcs similar to hg with respect to determining the commit
      message.  Fold a single change into one line and spawn an editor if
      multiple changes are detected.  (Closes: #563901)
  * rmadison:
    + Add http://qa.debian.org/cgi-madison/madison.cgi, shorthand "udd", as a
      known madison URL.
    + Detect an existing '?' in a URL and use '&' to append more cgi
      parameters.  Thanks to Raphael Geissert.
  * chdist:
    + Add "use strict" and update for compliance.
    + Use Dpkg::Version to perform version comparisons.
  * Devscripts::Versort: Use Dpkg::Version::version_compare instead of
    invoking “dpkg --compare-versions”.
  * debian/control: Update Vcs-* to point to the new Git repository.
  * dcmd: Allow capital letters for the section and priority fields.  (Closes:
    #595159)

  [ Patrick Schoenfeld ]
  * nmudiff: Fix "[nmudiff] please include --tagpending option" by applying the
    patch from Gregor Herrmann. Thanks. (Closes: #559549)
  * build-rdeps:
    + Add some documentation to the manpage, which emphasizes on the fact that
      the tool has some external dependencies (namely apt Sources files)
    + Add a proper argument passing to test_for_valid_component() so that
      it really gets the filename and not the Release file entry.
    + Add a check to test_for_valid_component() to test if a given Sources
      file actually exists and otherwise print a more meaningful warning.
      (Closes: #564443)

 -- Patrick Schoenfeld <schoenfeld@debian.org>  Mon, 11 Jan 2010 15:32:59 +0100

devscripts (2.10.61) unstable; urgency=low

  * bts: Correct the address used to email the submitter when using the "bts
    done" command.

 -- James Vega <jamessan@debian.org>  Sat, 02 Jan 2010 22:20:19 -0500

devscripts (2.10.60) unstable; urgency=low
